--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ build.xml
 .settings
 .idea/*
 
-app/css/*.css
-app/js/*.js
-app/*.html
-app/partials/*.html
+public/css/*.css
+public/js/*.js
+public/*.html
+public/partials/*.html
