--- a/config/jsTestDriver-scenario.conf
+++ b/config/jsTestDriver-scenario.conf
@@ -5,6 +5,9 @@ load:
   - config/jstd-scenario-adapter-config.js
   - test/lib/angular/jstd-scenario-adapter.js
   - test/e2e/scenarios.js
+  - public/lib/underscore/*.js
+  - public/lib/jquery/*.js
+  - public/lib/d3/*.js
 
 proxy:
  - {matcher: "*", server: "http://localhost:3000"}
