added middleware, corrections in front

--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
 	, "coffee-script": "*"
 	, "jade": "*"
 	, "optimist": "*"
+	, "coffee-script": "*"
+	, "zmq": "*"
   },
   "devDependencies": {
       "nodemon": "*"
