--- a/config/jsTestDriver.conf
+++ b/config/jsTestDriver.conf
@@ -1,8 +1,8 @@
 server: http://localhost:9876
 
 load:
-  - test/lib/jasmine/jasmine.js
-  - test/lib/jasmine-jstd-adapter/JasmineAdapter.js
+  - test_frontend/lib/jasmine/jasmine.js
+  - test_frontend/lib/jasmine-jstd-adapter/JasmineAdapter.js
   - public/lib/angular/angular.js
   - public/lib/angular/angular-cookies.js
   - public/lib/angular/angular-resource.js
@@ -10,8 +10,8 @@ load:
   - public/lib/underscore/*.js
   - public/lib/jquery/*.js
   - public/lib/d3/*.js
-  - test/lib/angular/angular-mocks.js
+  - test_frontend/lib/angular/angular-mocks.js
   - public/js/*.js
-  - test/unit/*.js
+  - test_frontend/unit/*.js
 
 exclude:
