--- a/config.json
+++ b/config.json
@@ -3,7 +3,7 @@
         "host": "localhost"
       , "port": 3306
       , "user": "root"
-      , "password": "holahola"
+      , "password": "123"
       , "database": "tvauction"
     }
   , "middleware": {
